# ThepExcelMCP

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  manifest.json  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: ROADMAP.md  mcp-rc-2026-07-28-migration.md
docs/superpowers/plans/: 2026-06-12-phase4-charts-screenshot-python.md
scripts/: build_mcpb.py
skills/excel-god/: SKILL.md
skills/excel-god/scripts/: extract_mcode.py
src/thepexcel_mcp/: __init__.py  server.py  session.py
src/thepexcel_mcp/analysis/: __init__.py  pq_analyzer.py
src/thepexcel_mcp/domains/: __init__.py  charts.py  comments.py  conditional_format.py  datamodel.py  diff.py  find_replace.py  format.py  hyperlinks.py  names.py  outline.py  page_setup.py  pivots.py  powerquery.py  protection.py  ranges.py  screenshot.py  shapes.py  sheets.py  slicer.py  snapshot.py  sparkline.py  tables.py  validation.py  vba.py  view.py  workbook.py
tests/: conftest.py  smoke_com.py  test_comments.py  test_conditional_format.py  test_datamodel.py  test_diff.py  test_find_replace.py  test_format_workbook.py  test_hyperlinks.py  test_outline.py  test_page_setup.py  test_phase3.py  test_phase4.py  test_powerquery.py  test_pq_analyzer.py  test_protection.py  test_ranges_write.py  test_shapes.py  test_slicer.py  test_snapshot.py  test_sparkline.py  test_tables_pivots.py  test_validation.py  test_view.py
