[project]
name = "thepexcel-mcp"
version = "0.1.0"
description = "Windows desktop MCP server — full Excel control via COM (Power Query, PivotTables, Data Model, VBA, dynamic arrays)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "pywin32>=306",
]

[project.scripts]
thepexcel-mcp = "thepexcel_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thepexcel_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# smoke_com.py is NOT collected — it requires a live Excel instance
collect_ignore = ["tests/smoke_com.py"]
