[project]
name = "thepexcel-mcp"
version = "0.1.0"
description = "Windows desktop MCP server — full Excel control via COM (Power Query, PivotTables, Data Model, VBA, dynamic arrays)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "pywin32>=306",
    "pillow>=10.0",
]

[project.scripts]
thepexcel-mcp = "thepexcel_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thepexcel_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# smoke_com.py is NOT collected — it requires a live Excel instance
# collect_ignore is a conftest.py option, not an ini option; we rely on
# the naming convention (smoke_com.py does not match test_*.py pattern)

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
